fixed covered tab to say uncovered, added top pane

--- a/style.css
+++ b/style.css
@@ -25,6 +25,16 @@
   font-size: 15px;
 }
 
+.top-bar{
+  width: 100%;
+  height: 50px;
+  background-color: #444444;
+  color: #d3d3d3;
+  padding-top: 10px;
+  padding-left: 10px;
+  font-size: 10px;
+}
+
 .button:hover{
   background-color: #d3d3d3;
 }
@@ -42,7 +52,27 @@ a{
   overflow-y: auto;
 }
 
-.undetectable{
+#summaryModal{
+  text-align: center;
+}
+
+.summary a{
+  color: white;
+}
+
+.summary a:hover{
+  color: #d3d3d3;
+}
+
+.summary{
+  text-align: center;
+}
+
+.summary table{
+  width: 100%;
+}
+
+.unkillable{
   color: #d3d3d3;
 }
 
@@ -56,6 +86,7 @@ a{
     background-color: #e1bfff;
       color: black;
 }
+
 
 #live .nav-pills > li.active > a {
     background-color: #9bf198;
@@ -127,13 +158,16 @@ a:link{
 
  a:hover #live-stats{
   background-color: #9bf198;
+  color: black;
 }
 
 a:hover #killed-stats{
   background-color: #ff7f7f;
+  color: black;
 }
 a:hover #covered-stats{
   background-color: #ffb481;
+  color: black;
 }
 
 .ui-state-highlight{
@@ -238,9 +272,14 @@ a table{
   background-color: #2a2a2a;
   width: 100%;
   overflow-y:auto;
-  padding-top: 50px;
+  padding-top: 10px;
 }
 
+
+.class-info{
+  color: gray;
+  font-size: 11px;
+}
 .left-wrapper .panel{
   border-color: #d3d3d3;
 }
